--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -23,6 +23,16 @@ font-family: 'Big Shoulders Stencil Text', cursive;
     text-align: center;
 }
 
+.repskills {
+    align-items: center;
+}
+
+.describe {
+    width: 50%;
+    margin: 20px auto;
+    text-align: center;
+}
+
 
 @media screen and (max-width: 1020px) {
     .describe {
